migrate headlines to bs5
Signed-off-by: Michael Weimann <mail@michael-weimann.eu>

--- a/resources/views/errors/404.twig
+++ b/resources/views/errors/404.twig
@@ -7,7 +7,7 @@
         <div class="col-sm-6 col-sm-offset-3 error-big">
             <h2>
                 4<span class="pulse">:</span>{{ status|slice(1, 2) }}
-                <small>{{ __("No sleep found") }}</small>
+                <small class="text-muted">{{ __("No sleep found") }}</small>
             </h2>
 
             {% block content_text %}
