--- a/resources/views/pages/design.twig
+++ b/resources/views/pages/design.twig
@@ -13,15 +13,15 @@
 {% block content %}
     <div class="col-12">
         <div class="container">
-        <h1>{{ block('title') }} <small>{{ themes[theme] }}</small></h1>
+        <h1>{{ block('title') }} <small class="text-muted">{{ themes[theme] }}</small></h1>
 
         <h2>Elements <small class="text-muted">small</small></h2>
         <div class="row">
             <div class="col-md-2">
-                <h3>Headings <small>small</small></h3>
-                <h4>H4 <small>small</small></h4>
-                <h5>H5 <small>small</small></h5>
-                <h6>H6 <small>small</small></h6>
+                <h3>Headings <small class="text-muted">small</small></h3>
+                <h4>H4 <small class="text-muted">small</small></h4>
+                <h5>H5 <small class="text-muted">small</small></h5>
+                <h6>H6 <small class="text-muted">small</small></h6>
             </div>
             <div class="col-md-6">
                 <h3>Lists</h3>
