--- a/resources/views/pages/faq/overview.twig
+++ b/resources/views/pages/faq/overview.twig
@@ -34,7 +34,9 @@
                             <div class="panel-heading">
                                 <h3>
                                     {{ item.question }}
-                                    <small><a class="ref-link" href="#faq-{{ item.id }}">{{ m.glyphicon('link') }}</a></small>
+                                    <small class="text-muted">
+                                        <a class="ref-link" href="#faq-{{ item.id }}">{{ m.glyphicon('link') }}</a>
+                                    </small>
                                 </h3>
                             </div>
 
