--- a/resources/views/pages/settings/settings.twig
+++ b/resources/views/pages/settings/settings.twig
@@ -6,7 +6,10 @@
 {% block content %}
     <div class="container user-settings">
         {% block container_title %}
-            <h1>{{ __('settings.settings') }} <small>{{ block('title') }}</small></h1>
+            <h1>
+                {{ __('settings.settings') }}
+                <small class="text-muted">{{ block('title') }}</small>
+            </h1>
         {% endblock %}
 
         <div class="row">
