--- a/resources/views/pages/design.twig
+++ b/resources/views/pages/design.twig
@@ -88,17 +88,29 @@
             <div class="col-md-3">
                 <h3>Navigation Tabs</h3>
                 <ul class="nav nav-tabs">
-                    <li class="active"><a href="#">Lorem</a></li>
-                    <li><a href="#">Ipsum</a></li>
-                    <li><a href="#">Dolor</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Lorem</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Ipsum</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Dolor</a>
+                    </li>
                 </ul>
             </div>
             <div class="col-md-3 settings-menu">
                 <h3>Navigation Pills</h3>
-                <ul class="nav nav-pills nav-stacked">
-                    <li class="active"><a href="#">Some</a></li>
-                    <li><a href="#">Test</a></li>
-                    <li><a href="#">Menu</a></li>
+                <ul class="nav nav-pills flex-column">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Some</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Test</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Menu</a>
+                    </li>
                 </ul>
             </div>
         </div>
