--- a/resources/views/pages/settings/settings.twig
+++ b/resources/views/pages/settings/settings.twig
@@ -14,10 +14,10 @@
 
         <div class="row">
             <div class="col-md-3 settings-menu">
-                <ul class="nav nav-pills nav-stacked">
+                <ul class="nav nav-pills flex-column">
                     {% for url,title in settings_menu %}
-                        <li{% if url == request.url() %} class="active"{% endif %}>
-                            <a href="{{ url }}">{{ __(title) }}</a>
+                        <li class="nav-item">
+                            <a class="nav-link {% if url == request.url() %}active{% endif %}" href="{{ url }}">{{ __(title) }}</a>
                         </li>
                     {% endfor %}
                 </ul>
