--- a/resources/assets/themes/cyborg_styles.scss
+++ b/resources/assets/themes/cyborg_styles.scss
@@ -45,37 +45,6 @@ THE SOFTWARE.
 // Bootswatch
 // -----------------------------------------------------
 
-// Navbar =====================================================================
-
-// Buttons ====================================================================
-
-// Typography =================================================================
-
-.text-primary,
-.text-primary:hover {
-  color: $brand-primary;
-}
-
-.text-success,
-.text-success:hover {
-  color: $brand-success;
-}
-
-.text-danger,
-.text-danger:hover {
-  color: $brand-danger;
-}
-
-.text-warning,
-.text-warning:hover {
-  color: $brand-warning;
-}
-
-.text-info,
-.text-info:hover {
-  color: $brand-info;
-}
-
 // Tables =====================================================================
 
 table,
@@ -102,13 +71,13 @@ table,
   .help-block,
   .control-label,
   .form-control-feedback {
-    color: $brand-warning;
+    color: $warning;
   }
 
   .form-control,
   .form-control:focus,
   .input-group-addon {
-    border-color: $brand-warning;
+    border-color: $warning;
   }
 }
 
@@ -116,13 +85,13 @@ table,
   .help-block,
   .control-label,
   .form-control-feedback {
-    color: $brand-danger;
+    color: $danger;
   }
 
   .form-control,
   .form-control:focus,
   .input-group-addon {
-    border-color: $brand-danger;
+    border-color: $danger;
   }
 }
 
@@ -130,13 +99,13 @@ table,
   .help-block,
   .control-label,
   .form-control-feedback {
-    color: $brand-success;
+    color: $success;
   }
 
   .form-control,
   .form-control:focus,
   .input-group-addon {
-    border-color: $brand-success;
+    border-color: $success;
   }
 }
 
