--- a/resources/assets/themes/theme1.scss
+++ b/resources/assets/themes/theme1.scss
@@ -10,10 +10,10 @@ $gray-dark:              #282828;   // #333
 $gray-light:             #888;   // #999
 $gray-lighter:           #ADAFAE; // #eee
 
-$brand-primary:         #428bca;
-$brand-success:         #5cb85c;
-$brand-info:            #5bc0de;
-$brand-warning:         #f0ad4e;
+$primary:         #428bca;
+$success:         #5cb85c;
+$info:            #5bc0de;
+$warning:         #f0ad4e;
 
 
 //== changed Buttons
@@ -22,13 +22,9 @@ $btn-default-color:              #fff;
 $btn-default-bg:                 lighten($gray-dark, 10%);
 
 $btn-primary-border:             darken($btn-default-bg, 10%);
-
 $btn-success-border:             $btn-primary-border;
-
 $btn-info-border:                $btn-primary-border;
-
 $btn-warning-border:             $btn-primary-border;
-
 $btn-danger-border:              $btn-primary-border;
 
 $btn-link-disabled-color:        $gray-light;
@@ -50,19 +46,19 @@ $pagination-active-color:              #fff;
 //== changed Form states and alerts
 
 $state-success-text:             #fff;
-$state-success-bg:               $brand-success;
+$state-success-bg:               $success;
 $state-success-border:           darken($state-success-bg, 5%);
 
 $state-info-text:                #fff;
-$state-info-bg:                  $brand-info;
+$state-info-bg:                  $info;
 $state-info-border:              darken($state-info-bg, 7%);
 
 $state-warning-text:             #fff;
-$state-warning-bg:               $brand-warning;
+$state-warning-bg:               $warning;
 $state-warning-border:           darken($state-warning-bg, 3%);
 
 $state-danger-text:              #fff;
-$state-danger-bg:                $brand-danger;
+$state-danger-bg:                $danger;
 $state-danger-border:            darken($state-danger-bg, 3%);
 
 
