add theme_info config
Signed-off-by: Michael Weimann <mail@michael-weimann.eu>

--- a/resources/assets/themes/cyborg_variables.scss
+++ b/resources/assets/themes/cyborg_variables.scss
@@ -29,16 +29,15 @@ THE SOFTWARE.
 // --------------------------------------------------
 
 //== Colors
-//
+
 //## Gray and brand colors for use across Bootstrap.
-  // needs change
 $gray-darker:            #222; // #222
 $gray-dark:              #333;   // #333
 $gray:                   #555; // #555
 $gray-light:             #999;   // #999
 $gray-lighter:           #eee; // #eee
 
-$primary:         #99ba00;
+$primary:         #437aca;
 $success:         #99ba00;
 $info:            #0076ba;
 $warning:         #ffc600;
@@ -167,27 +166,27 @@ $table-border-color:            $gray-dark;
 
 $btn-font-weight:                normal;
 
-$btn-default-color:              #000;
+$btn-color:                      #000;
 $btn-default-bg:                 $gray-light;
 $btn-default-border:             darken($btn-default-bg, 10%);
 
-$btn-primary-color:              $btn-default-color;
+$btn-primary-color:              $btn-color;
 $btn-primary-bg:                 $primary;
 $btn-primary-border:             darken($btn-primary-bg, 10%);
 
-$btn-success-color:              $btn-default-color;
+$btn-success-color:              $btn-color;
 $btn-success-bg:                 $success;
 $btn-success-border:             darken($btn-success-bg, 10%);
 
-$btn-info-color:                 $btn-default-color;
+$btn-info-color:                 $btn-color;
 $btn-info-bg:                    $info;
 $btn-info-border:                darken($btn-info-bg, 10%);
 
-$btn-warning-color:              $btn-default-color;
+$btn-warning-color:              $btn-color;
 $btn-warning-bg:                 $warning;
 $btn-warning-border:             darken($btn-warning-bg, 10%);
 
-$btn-danger-color:               $btn-default-color;
+$btn-danger-color:               $btn-color;
 $btn-danger-bg:                  $danger;
 $btn-danger-border:              darken($btn-danger-bg, 10%);
 
@@ -199,14 +198,14 @@ $btn-link-disabled-color:        $gray-light;
 //##
 
 //** `<input>` background color
-$input-bg:                       #000;
+$input-bg:                       $gray-darker;
 //** `<input disabled>` background color
 $input-bg-disabled:              $gray-darker;
 
 //** Text color for `<input>`s
 $input-color:                    $text-color;
 //** `<input>` border color
-$input-border:                   $gray-dark;
+$input-border-color:             $gray-dark;
 //** `<input>` border radius
 $input-border-radius:            $border-radius-base;
 //** Border color for inputs on focus
@@ -228,8 +227,9 @@ $legend-border-color:            $gray-dark;
 //** Background color for textual input addons
 $input-group-addon-bg:           $gray-light;
 //** Border color for textual input addons
-$input-group-addon-border-color: $input-border;
+$input-group-addon-border-color: $input-border-color;
 
+$form-label-font-weight: bold;
 
 //== Dropdowns
 //
@@ -767,8 +767,6 @@ $well-border:                 darken($well-bg, 7%);
 //##
 
 $badge-color:                 #000;
-//** Linked badge text color on hover
-$badge-link-hover-color:      #000;
 $badge-bg:                    $primary;
 
 //** Badge text color in active nav link
@@ -778,7 +776,6 @@ $badge-active-bg:             #fff;
 
 $badge-font-weight:           bold;
 $badge-line-height:           1;
-$badge-border-radius:         10px;
 
 
 //== Breadcrumbs
