--- a/resources/assets/themes/theme1.scss
+++ b/resources/assets/themes/theme1.scss
@@ -18,7 +18,7 @@ $warning:         #f0ad4e;
 
 //== changed Buttons
 
-$btn-default-color:              #fff;
+$btn-color:                      #fff;
 $btn-default-bg:                 lighten($gray-dark, 10%);
 
 $btn-primary-border:             darken($btn-default-bg, 10%);
@@ -65,7 +65,6 @@ $state-danger-border:            darken($state-danger-bg, 3%);
 //== changed Badges
 
 $badge-color:                 #fff;
-$badge-link-hover-color:      #fff;
 
 
 //== changed Type
