--- a/resources/assets/themes/theme11.scss
+++ b/resources/assets/themes/theme11.scss
@@ -21,7 +21,7 @@ $text-color:            #fff;
 
 //== Buttons
 
-$btn-default-color:              #fff;
+$btn-color:                      #fff;
 $btn-default-bg:                 lighten($gray-dark, 10%);
 
 $btn-primary-color:              #000;
@@ -60,9 +60,6 @@ $label-default-bg:            lighten($btn-default-bg, 20%);
 $label-color:                 #000;
 $label-link-hover-color:      #000;
 
-//== Badges
-
-$badge-link-hover-color:      #fff;
 
 //== Type
 
