--- a/resources/assets/themes/theme12.scss
+++ b/resources/assets/themes/theme12.scss
@@ -21,7 +21,7 @@ $text-color:            $gray-lighter;
 
 //== Buttons
 
-$btn-default-color:              $gray-lighter;
+$btn-color:                      $gray-lighter;
 $btn-default-bg:                 lighten($gray-dark, 10%);
 
 $btn-primary-color:              $black;
@@ -63,7 +63,6 @@ $panel-primary-text:          #000;
 //== Badges
 
 $badge-color:                 $black;
-$badge-link-hover-color:      $black;
 
 //== Type
 
