--- a/resources/assets/themes/theme14.scss
+++ b/resources/assets/themes/theme14.scss
@@ -49,7 +49,7 @@ $headings-font-family:    $font-family-serif;
 
 //== Buttons
 
-$btn-default-color:              #fff;
+$btn-color:                      #fff;
 $btn-default-bg:                 lighten($gray-dark, 10%);
 
 $btn-primary-color:              #fff;
@@ -111,7 +111,6 @@ $panel-danger-text:           #fff;
 //== Badges
 
 $badge-color:                 $black;
-$badge-link-hover-color:      $black;
 
 //== Type
 
