--- a/resources/views/layouts/parts/navbar.twig
+++ b/resources/views/layouts/parts/navbar.twig
@@ -7,7 +7,7 @@
     </li>
 {% endmacro %}
 
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark border-bottom border-dark">
+<nav class="navbar fixed-top navbar-expand-lg border-bottom navbar-{{ theme_info['navbar'] }} bg-{{ theme_info['navbar_bg'] }} border-{{ theme_info['navbar_border'] }}">
     <div class="container-fluid">
         <a class="navbar-brand" href="{{ url('/') }}">
             <span class="icon-icon_angel"></span>
