--- a/resources/assets/themes/base.scss
+++ b/resources/assets/themes/base.scss
@@ -4,7 +4,18 @@ $cursor-disabled: false;
 $link-decoration: none !default;
 $link-hover-decoration: underline !default;
 
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
+
+$custom-colors: (
+  black: #000
+);
+
+$theme-colors: map-merge($theme-colors, $custom-colors);
+
 @import "~bootstrap/scss/bootstrap";
+
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 @import "~eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css";
 @import "~select2/dist/css/select2.css";
