--- a/resources/assets/themes/theme6.scss
+++ b/resources/assets/themes/theme6.scss
@@ -22,7 +22,7 @@ $brand-danger:          rgb(255, 102, 0);
 
 //== changed Buttons
 
-$btn-default-color:              #fff;
+$btn-color:                      #fff;
 $btn-default-bg:                 lighten($gray-dark, 10%);
 
 $btn-primary-border:             darken($btn-default-bg, 10%);
@@ -88,8 +88,6 @@ $panel-default-heading-bg:    darken($gray-darker, 5%);
 //== changed Badges
 
 $badge-color:                 #fff;
-
-$badge-link-hover-color:      #fff;
 
 
 //== changed Type
