--- a/resources/views/macros/base.twig
+++ b/resources/views/macros/base.twig
@@ -1,5 +1,5 @@
 {% macro angel() %}
-    <span class="icon-icon_angel"></span>
+    <span class="icon-icon_angel bg-light"></span>
 {% endmacro %}
 
 {% macro glyphicon(glyph) %}
