add theme info to design

--- a/resources/views/pages/design.twig
+++ b/resources/views/pages/design.twig
@@ -321,6 +321,14 @@
                 </p>
             </div>
         </div>
+        <div>
+            <h3>Theme-Variablen</h3>
+            <pre>
+theme_info['navbar']: {{ theme_info['navbar'] }}
+theme_info['navbar_bg']: {{ theme_info['navbar_bg'] }}
+theme_info['navbar_border']: {{ theme_info['navbar_border'] }}
+            </pre
+        </div>
     </div>
     </div>
 {% endblock %}
