--- a/resources/assets/themes/theme10.scss
+++ b/resources/assets/themes/theme10.scss
@@ -1,17 +1,17 @@
 // cccamp19 green (2019)
-@import "cyborg_variables.scss";
 
 // Variables
 // --------------------------------------------------
 
 //== changed Colors
 
-$gray-dark:              #282828;   // #333
-$gray-light:             #888;   // #999
-$gray-lighter:           #ADAFAE; // #eee
+$gray-dark:    #282828;
+$gray-light:   #888;
+$gray-lighter: #ADAFAE;
 
 $brand-primary:         #99ba00;
 
+@import "cyborg_variables.scss";
 @import "cyborg_styles.scss";
 
 // Specials for cccamp19 design
