--- a/resources/assets/themes/theme11.scss
+++ b/resources/assets/themes/theme11.scss
@@ -1,17 +1,18 @@
 // high contrast
-@import "cyborg_variables.scss";
 // Variables
 // --------------------------------------------------
 
 //== Colors
 
-$gray-dark:              #282828;   // #333
-$gray-light:             #888;   // #999
-$gray-lighter:           #ADAFAE; // #eee
+$gray-dark:    #282828;
+$gray-darker:  #222;
+$gray-light:   #888;
+$gray-lighter: #ADAFAE;
 
 $brand-primary:         #72abfa;
 $brand-success:         #5cb85c;
 $brand-info:            #5bc0de;
+$brand-danger:          #d9534f;
 $brand-warning:         #f0ad4e;
 
 //== Scaffolding
@@ -69,7 +70,9 @@ $headings-small-color:        $gray-lighter;
 
 // Bootswatch
 // -----------------------------------------------------
+@import "cyborg_variables.scss";
 @import "cyborg_styles.scss";
+
 // Typography =================================================================
 
 .text-danger,
