--- a/resources/assets/themes/theme12.scss
+++ b/resources/assets/themes/theme12.scss
@@ -1,12 +1,12 @@
 // 36c3
-@import "cyborg_variables.scss";
 
 //== Colors
 
-$gray-dark:              #282828;   // #333
-$gray-light:             #888;   // #999
-$gray-lighter:           #D0D0CE; // #eee
-$black:                  #000;
+$gray-dark:    #282828;
+$gray-darker:  #222;
+$gray-light:   #888;
+$gray-lighter: #D0D0CE;
+$black:        #000;
 
 $brand-primary:         #fe5000;
 $brand-success:         #00bb31;
@@ -70,6 +70,7 @@ $headings-small-color:        $gray-light;
 
 // Bootswatch
 // -----------------------------------------------------
+@import "cyborg_variables.scss";
 @import "cyborg_styles.scss";
 // Forms ======================================================================
 
