--- a/resources/assets/themes/theme4.scss
+++ b/resources/assets/themes/theme4.scss
@@ -1,14 +1,13 @@
 // 33c3 (2016)
-@import "cyborg_variables.scss";
 
 // Variables
-// --------------------------------------------------
 
 //== changed Colors
 
-$gray-dark:              #282828;   // #333
-$gray-light:             #888;   // #999
-$gray-lighter:           #ADAFAE; // #eee
+$gray-dark:    #282828;
+$gray-darker:  #222;
+$gray-light:   #888;
+$gray-lighter: #ADAFAE;
 
 $brand-primary:         rgb(0, 156, 139);
 $brand-success:         rgb(141, 193, 35);
@@ -85,6 +84,7 @@ $headings-small-color:        $gray-light;
 
 // Bootswatch
 // -----------------------------------------------------
+@import "cyborg_variables.scss";
 @import "cyborg_styles.scss";
 
 // added Forms ======================================================================
