--- a/resources/assets/themes/theme6.scss
+++ b/resources/assets/themes/theme6.scss
@@ -1,13 +1,13 @@
 // 34c3 dark (2017)
-@import "cyborg_variables.scss";
 // Variables
 // --------------------------------------------------
 
 //== changed Colors
 
-$gray-dark:              #282828;   // #333
-$gray-light:             #888;   // #999
-$gray-lighter:           #ADAFAE; // #eee
+$gray-dark:    #282828;
+$gray-light:   #888;
+$gray-darker:  #222;
+$gray-lighter: #ADAFAE;
 
 $brand-primary:         rgb(164, 28, 49);
 $brand-success:         rgb(153, 204, 0);
@@ -98,6 +98,7 @@ $headings-small-color:        $gray-light;
 // Bootswatch
 // -----------------------------------------------------
 
+@import "cyborg_variables.scss";
 @import "cyborg_styles.scss";
 
 // Typography =================================================================
