--- a/resources/assets/themes/theme8.scss
+++ b/resources/assets/themes/theme8.scss
@@ -1,17 +1,16 @@
 // cccamp19 blue (2019)
-@import "cyborg_variables.scss";
 
 // Variables
-// --------------------------------------------------
 
 //== changed Colors
 
-$gray-dark:              #282828;   // #333
-$gray-light:             #888;   // #999
-$gray-lighter:           #ADAFAE; // #eee
+$gray-dark:              #282828;
+$gray-light:             #888;
+$gray-lighter:           #ADAFAE;
 
 $brand-primary:         #0076ba;
 
+@import "cyborg_variables.scss";
 @import "cyborg_styles.scss";
 
 // Specials for cccamp19 design
