--- a/resources/views/pages/design.twig
+++ b/resources/views/pages/design.twig
@@ -33,7 +33,7 @@
 {% block content %}
     <div class="col-12">
         <div class="container">
-        <h1>{{ block('title') }} <small class="text-muted">{{ themes[theme] }}</small></h1>
+        <h1>{{ block('title') }} <small class="text-muted">{{ themes[themeId]['name'] }}</small></h1>
 
         <h2>Elements <small class="text-muted">small</small></h2>
         <div class="row">
@@ -64,10 +64,10 @@
             <div class="col-md-4">
                 <h3>Themes</h3>
                 <ul>
-                    {% for id,theme in themes|sort %}
+                    {% for id,theme in themes %}
                         <li>
                             <a href="{{ url('design', {'theme': id}) }}">
-                                {{ theme }}
+                                {{ theme['name'] }}
                             </a>
                         </li>
                     {% endfor %}
@@ -320,14 +320,6 @@
                     {{ f.submit() }}
                 </p>
             </div>
-        </div>
-        <div>
-            <h3>Theme-Variablen</h3>
-            <pre>
-theme_info['navbar']: {{ theme_info['navbar'] }}
-theme_info['navbar_bg']: {{ theme_info['navbar_bg'] }}
-theme_info['navbar_border']: {{ theme_info['navbar_border'] }}
-            </pre
         </div>
     </div>
     </div>
