make all themes basically working

--- a/resources/assets/themes/base.scss
+++ b/resources/assets/themes/base.scss
@@ -58,7 +58,7 @@ a .icon-icon_angel {
 }
 
 .navbar-brand .icon-icon_angel {
-  background-color: $navbar-dark-brand-color;
+  background-color: $body-color;
 }
 
 table a > .icon-icon_angel {
