--- a/resources/assets/themes/cyborg_variables.scss
+++ b/resources/assets/themes/cyborg_variables.scss
@@ -47,12 +47,12 @@ $danger:          #d9534f !default;
 //
 //## Settings for some of the most global styles.
 
-$body-bg:    #060606;
+$body-bg:    #060606 !default;
 $body-color: $gray-light;
 
 //** Global text color on `<body>`.
-$text-color:            $gray-light;
-$text-muted: $gray-light;
+$text-color: $gray-light;
+$text-muted: $gray-light !default;
 
 //** Global textual link color.
 $link-color:            $primary;
@@ -64,8 +64,8 @@ $link-hover-color:      $link-color;
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-$font-family-serif:       Georgia, "Times New Roman", Times, serif;
-$font-family-sans-serif: 'Montserrat', Helvetica Neue, Helvetica, Arial, sans-serif;
+$font-family-serif:       Georgia, "Times New Roman", Times, serif !default;
+$font-family-sans-serif: 'Montserrat', Helvetica Neue, Helvetica, Arial, sans-serif !default;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
 $font-family-base:        $font-family-sans-serif;
@@ -87,7 +87,7 @@ $line-height-base:        1.428571429; // 20/14
 $line-height-computed:    floor(($font-size-base * $line-height-base)); // ~20px
 
 //** By default, this inherits from the `<body>`.
-$headings-font-family:    $font-family-base;
+$headings-font-family:    $font-family-base !default;
 $headings-font-weight:    500;
 $headings-line-height:    1.1;
 $headings-color:          #fff;
