--- a/resources/assets/themes/theme10.scss
+++ b/resources/assets/themes/theme10.scss
@@ -9,7 +9,10 @@ $gray-dark:    #282828;
 $gray-light:   #888;
 $gray-lighter: #ADAFAE;
 
-$brand-primary:         #99ba00;
+$brand-primary: #99ba00;
+$primary:       $brand-primary;
+
+$text-muted: $primary;
 
 @import "cyborg_variables.scss";
 @import "cyborg_styles.scss";
