--- a/resources/assets/themes/theme11.scss
+++ b/resources/assets/themes/theme11.scss
@@ -9,11 +9,16 @@ $gray-darker:  #222;
 $gray-light:   #888;
 $gray-lighter: #ADAFAE;
 
-$brand-primary:         #72abfa;
-$brand-success:         #5cb85c;
-$brand-info:            #5bc0de;
-$brand-danger:          #d9534f;
-$brand-warning:         #f0ad4e;
+$brand-primary: #72abfa;
+$primary:       $brand-primary;
+$brand-success: #5cb85c;
+$success:       $brand-success;
+$brand-info:    #5bc0de;
+$info:          $brand-info;
+$brand-danger:  #d9534f;
+$danger:        $brand-danger;
+$brand-warning: #f0ad4e;
+$warning:       $brand-warning;
 
 //== Scaffolding
 
