--- a/resources/assets/themes/theme4.scss
+++ b/resources/assets/themes/theme4.scss
@@ -9,16 +9,20 @@ $gray-darker:  #222;
 $gray-light:   #888;
 $gray-lighter: #ADAFAE;
 
-$brand-primary:         rgb(0, 156, 139);
-$brand-success:         rgb(141, 193, 35);
-$brand-info:            rgb(70, 71, 73);
-$brand-warning:         rgb(255, 244, 95);
-$brand-danger:          rgb(277, 38, 60);
-
+$brand-primary: rgb(0, 156, 139);
+$primary: rgb(0, 156, 139);
+$brand-success: rgb(141, 193, 35);
+$success: rgb(141, 193, 35);
+$brand-info:    rgb(70, 71, 73);
+$info:    rgb(70, 71, 73);
+$brand-warning: rgb(255, 244, 95);
+$warning: rgb(255, 244, 95);
+$brand-danger:  rgb(277, 38, 60);
+$danger:  rgb(277, 38, 60);
 
 //== changed Scaffolding
 
-$body-bg:               #1d1d1b;
+$body-bg:  #1d1d1b;
 
 
 //== changed Buttons
