--- a/resources/assets/themes/theme6.scss
+++ b/resources/assets/themes/theme6.scss
@@ -9,11 +9,16 @@ $gray-light:   #888;
 $gray-darker:  #222;
 $gray-lighter: #ADAFAE;
 
-$brand-primary:         rgb(164, 28, 49);
-$brand-success:         rgb(153, 204, 0);
-$brand-info:            rgb(0, 204, 255);
-$brand-warning:         rgb(255, 255, 51);
-$brand-danger:          rgb(255, 102, 0);
+$brand-primary: rgb(164, 28, 49);
+$primary:       rgb(164, 28, 49);
+$brand-success: rgb(153, 204, 0);
+$success:       rgb(153, 204, 0);
+$brand-info:    rgb(0, 204, 255);
+$info:          rgb(0, 204, 255);
+$brand-warning: rgb(255, 255, 51);
+$warning:       rgb(255, 255, 51);
+$brand-danger:  rgb(255, 102, 0);
+$danger:        rgb(255, 102, 0);
 
 .label.label-warning, .progress-bar.progress-bar-warning {
   color: #000;
