--- a/resources/assets/themes/theme7.scss
+++ b/resources/assets/themes/theme7.scss
@@ -3,28 +3,22 @@
 // Variables
 // --------------------------------------------------
 
-//== changed Colors
-
-// gray BEBOOT: #4d4d4c
-// blue FRESH: #0084b0
-// green HOPE: #00a356
-// dark blue BASE: #18386b
-// orange GLINT: #f9b000
-// rot BEAT: #e40429
-// violet TENACY: #44357e
-
 $gray-darker:            #000;
 $gray-dark:              #000;
 $gray:                   #4d4d4c; // BEBOOT
 $gray-light:             $gray;
 $gray-lighter:           lighten($gray, 15%);
 
-$brand-primary:         #0084b0; // FRESH
-$primary: #0084b0;
-$brand-success:         #00a356; // HOPE
-$brand-info:            $brand-primary;
-$brand-warning:         #f9b000; // GLINT
-$brand-danger:          #e40429; // BEAT
+$brand-primary: #0084b0; // FRESH
+$primary:       #0084b0;
+$brand-success: #00a356; // HOPE
+$success:       #00a356; // HOPE
+$brand-info:    $brand-primary;
+$info:          $brand-primary;
+$brand-warning: #f9b000; // GLINT
+$warning:       #f9b000; // GLINT
+$brand-danger:  #e40429; // BEAT
+$danger:        #e40429; // BEAT
 
 
 //== changed Scaffolding
