--- a/resources/assets/themes/theme8.scss
+++ b/resources/assets/themes/theme8.scss
@@ -4,11 +4,14 @@
 
 //== changed Colors
 
-$gray-dark:              #282828;
-$gray-light:             #888;
-$gray-lighter:           #ADAFAE;
+$gray-dark:    #282828;
+$gray-light:   #888;
+$gray-lighter: #ADAFAE;
 
-$brand-primary:         #0076ba;
+$brand-primary: #0076ba;
+$primary:       #0076ba;
+
+$text-muted: $primary;
 
 @import "cyborg_variables.scss";
 @import "cyborg_styles.scss";
