--- a/resources/assets/themes/cyborg_variables.scss
+++ b/resources/assets/themes/cyborg_variables.scss
@@ -24,6 +24,8 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
 */
 
+@use "sass:math";
+
 // Cyborg 3.2.0
 // Variables
 // --------------------------------------------------
@@ -330,8 +332,8 @@ $container-lg:                 $container-large-desktop;
 $navbar-height:                    3.125rem;
 $navbar-margin-bottom:             $line-height-computed;
 $navbar-border-radius:             $border-radius-base;
-$navbar-padding-horizontal:        floor(($grid-gutter-width / 2));
-$navbar-padding-vertical:          (($navbar-height - $line-height-computed) / 2);
+$navbar-padding-horizontal:        floor(math.div($grid-gutter-width, 2));
+$navbar-padding-vertical:          math.div($navbar-height - $line-height-computed, 2);
 $navbar-collapse-max-height:       340px;
 
 $navbar-default-color:             $text-color;
